tests/asm-link/block-comment-termination-error/rgbasm.err
error: unterminated block comment
   ╭─[ test.asm:1:7 ]
   │
 1 │ PRINT /* block comments must terminate before EOF
   │       ─┬  
   │        ╰── block comment starting here
───╯
1 error generated.
